--- a/src/pages/Cv/Cv.module.scss
+++ b/src/pages/Cv/Cv.module.scss
@@ -1,41 +1,38 @@
 .page {
   display: flex;
   flex-grow: 1;
-  min-height: 960px;
   background-color: var(--secondary-bg-color);
   .panel {
     padding: 32px;
-    width: 50%;
     margin: 0;
     background-color: var(--main-bg-color);
-    height: 50%;
     h1 {
       padding-left: 16px;
     }
   }
+
+  .volunteer {
+    @extend .panel;
+    height: auto;
+    h1 {
+      padding-left: 16px;
+      color: var(--contrast-color);
+    }
+    background-color: var(--accent-color);
+  }
+
   .content {
     display: flex;
     flex-direction: row;
     gap: 16px;
-
     h2 {
       margin-bottom: 0;
       font-size: 16px;
-      // padding-bottom: 0;
     }
     p {
       margin-top: 8px;
       color: white;
     }
-  }
-  .volunteer {
-    h1 {
-      color: var(--contrast-color);
-    }
-    background-color: var(--accent-color);
-    height: 50%;
-    gap: 16px;
-    padding: 16px;
   }
   .skillsPanel {
     @extend .panel;
@@ -52,6 +49,7 @@
     }
     .skills {
       display: inline-flex;
+      flex-wrap: wrap;
       align-items: center;
       gap: 16px;
       .skill {
@@ -60,7 +58,6 @@
         align-items: center;
       }
     }
-
     img {
       height: 64px;
     }
